Update README file to reflect current project, remove tailwindcss

--- a/src/app.css
+++ b/src/app.css
@@ -94,5 +94,9 @@
         border: 1px solid gray;
         width: 50%;
         margin: auto;
-    }    
+    }
+    
+    .main-container {
+        height: 36.9em;
+    }
 }
